--- a/requirements.txt
+++ b/requirements.txt
@@ -33,9 +33,11 @@ idna==3.3
 inflection==0.5.0
 iniconfig==1.1.1
 ipfshttpclient==0.8.0a2
+Jinja2==3.1.2
 jsonschema==3.2.0
 lazy-object-proxy==1.7.1
 lru-dict==1.1.7
+MarkupSafe==2.1.1
 multiaddr==0.0.9
 multidict==6.0.2
 mypy-extensions==0.4.3
